--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -21,6 +21,9 @@ jobs:
         with:
             java-version: 11
             
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+              
       - name: Cache Gradle packages
         uses: actions/cache@v1
         with:
