--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -32,7 +32,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
           
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
         
       - name: Run all tests
         run: ./gradlew:test
