--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -35,4 +35,4 @@ jobs:
         run: ./gradlew build -x test
         
       - name: Run all tests
-        run: ./gradlew:test
+        run: ./gradlew test
