--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -15,24 +15,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-            java-version: 11
+          java-version: 11
             
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-              
-      - name: Cache Gradle packages
-        uses: actions/cache@v1
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-          
-      - name: Build with Gradle
-        run: ./gradlew build -x test
+          gradle-version: current
         
-      - name: Run all tests
-        run: ./gradlew test
+      - name: Build Gradle
+        run: ./gradlew build
+        
